--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [tool.poetry]
-name = "2024-p2"
+name = "2025-p2-mitch-manning"
 version = "0.1.0"
 description = ""
-authors = []
+authors = ["Mitch Manning <s4532126@uq.edu.au>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-flask = "^3.0.2"
-
+python = "^3.10"
+flask = "^3.1.0"
 
 [build-system]
 requires = ["poetry-core"]
